# SPLADE-PT-BR

./: .env.example  .gitignore  LICENSE  README.md  SPLADE_v2_PTBR_treinamento.ipynb  STATUS.md  compare_models.py  main.py  model_card.md  model_metadata.json  pyproject.toml  setup.sh  setup_env.sh  train_splade_pt.py  upload_to_hf.py  visualize_results.py
docs/: MODEL_CARD.md  README.md  STATUS.md  USAGE.md
docs/images/: README.md
evaluation_results/: comparison_report_20251202_133122.json  comparison_report_20251202_140700.json  comparison_report_20251202_161112.json  execution_summary_20251202_133122.json  execution_summary_20251202_140703.json  execution_summary_20251202_161115.json  metrics_en_20251202_161112.json  metrics_pt_br_20251202_133122.json  metrics_pt_br_20251202_140700.json  metrics_pt_br_20251202_161112.json
notebooks/: SPLADE_v2_PTBR_treinamento.ipynb
scripts/: README.md  test_all_scripts.sh
scripts/evaluation/: README.md  run_evaluation_comparator.py
scripts/training/: train_splade_pt.py
scripts/utils/: compare_models.py  upload_to_hf.py  visualize_results.py
