[project]
name = "splade-pt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "hydra-core<1.3.2",
    "ipykernel>=7.1.0",
    "pytrec-eval>=0.5",
    "torch>=2.0.0",
    "transformers>=4.18.0",
    "omegaconf>=2.1.2",
    "numpy>=1.21.0",
    "tqdm>=4.64.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.8.0",
    "numba>=0.62.1",
    "h5py>=3.15.1",
    "tensorboard>=2.20.0",
    "ipywidgets>=8.0.0",
]

# Nota: pytrec-eval requer python3.11-dev para compilar
# Instale com: sudo apt-get install python3.11-dev build-essential